samples/_failures_safe/1761516542_9d92b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5b2a8ac.c: In function ‘main’:
./samples/SAFE/__tmp_e5b2a8ac.c:159:5: error: expected declaration or statement at end of input
  159 |     if (!decompress_rle(compressed.data, compressed.size, &decompressed)) {
      |     ^~
./samples/SAFE/__tmp_e5b2a8ac.c:159:5: error: expected declaration or statement at end of input
